@@ -1,6 +1,7 @@
 Version 0.9.3
 Add LiveJournal plugin
 Add Greek translation
+Jabber: fix send rich-text messages
 
 Version 0.9.2
 Add styles plugin
